# cg-krita

./: .gitignore  README.md  __init__.py  default_example.txt  edit_with_krita.py  pyproject.toml
docs/: trouble.md
krita_files/: wait_and_open.desktop
krita_files/wait_and_open/: Manual.html  __init__.py  wait_and_open.py
